--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^8.0"
+        "php": "^8.0",
+        "mr-vaco/helper-code-for-laravel": "^0.1"
     },
     "autoload": {
         "psr-4": {
