--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
     "license": "MIT",
     "require": {
         "php": "^8.0",
-        "mr-vaco/helper-code-for-laravel": "^0.1"
+        "mr-vaco/helper-code-for-laravel": "^0.1",
+        "mr-vaco/orchid-helper-code": "^1.0"
     },
     "autoload": {
         "psr-4": {
